--- a/FigureYa147Plus_STRING/FigureYa147Plus_STRING.Rmd
+++ b/FigureYa147Plus_STRING/FigureYa147Plus_STRING.Rmd
@@ -1,13 +1,11 @@
 ---
-title: "FigureYa147interaction"
+title: "FigureYa147Plus_STRING"
 params:
-  author: "Zongcheng Li"
-  reviewer: "Ying Ge, Junyi Shen"
+  author: "Zongcheng Li, Ying Ge"
 output: html_document
 ---
 
 **Author(s)**: `r params$author`  
-**Reviewer(s)**: `r params$reviewer`  
 **Date**: `r Sys.Date()`  
 
 ## Academic Citation
@@ -15,10 +13,11 @@ If you use this code in your work or research, we kindly request that you cite o
 
 Xiaofan Lu, et al. (2025). FigureYa: A Standardized Visualization Framework for Enhancing Biomedical Data Interpretation and Research Efficiency. iMetaMed. https://doi.org/10.1002/imm3.70005
 
-To cite database 'ComPPI' in publications use:
+To cite database 'STRING' in publications use:
 
-Veres, D., Gyurko, M. D., Thaler, B., Szalay, K., Fazekas, D., Korcsmaros, T. and Csermely, P. (2015) ComPPI: a cellular compartment-specific database for protein-protein interaction network analysis. Nucleic Acids Res. (Database Issue) 43, D485-D493.
-http://arxiv.org/abs/1410.2494
+Szklarczyk D, Kirsch R, Koutrouli M, Nastou K, Mehryary F, Hachilif R, Annika GL, Fang T, Doncheva NT, Pyysalo S, Bork P‡, Jensen LJ‡, von Mering C‡.
+The STRING database in 2023: protein–protein association networks and functional enrichment analyses for any sequenced genome of interest.
+Nucleic Acids Res. 2023 Jan 6;51(D1):D638-646.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -26,35 +25,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## 需求描述
 ## Requirements description
-
-用interaction文件作为输入画调控网络图，线的长短与相互作用score对应，线的数量和颜色与证据对应。
-Use the interaction file as input to draw a regulatory network diagram. The length of the line corresponds to the interaction score, and the number and color of the line correspond to the evidence.
-
-![](example1.png)
-
-出自<https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4951236>
-From <https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4951236>
-
-这篇文章用matlab写了个脚本OncoBinder.m，free online，能根据多种数据找interaction、打分、画图，感兴趣的小伙伴写信给文章作者吧～
-This article uses Matlab to write a script OncoBinder.m, which is free online and can find interactions, score, and draw diagrams based on a variety of data. Interested friends can write to the author of the article~
-
-![](example2.png)
-
-出自<https://www.nature.com/articles/s41589-018-0161-x>
-
-Fig. 1 | Identification of HIP1R as a regulator of PD-L1. a, Schematic representation of the identification process. A set of low-confidence interactors of PD-L1 according to high-throughput assays (left panel) were analyzed by the OncoBinder model (middle panel) to identify functionally relevant interactions. The ‘co-activation’ scores of candidate interactors are plotted in the right panel, with statistically significant associations marked in red (P < 0.01, Pearson correlation, two-sided). The modeling experiment was replicated for three times with the same results obtained.
-
-**图的解析**
-**Analysis of the graph**
-
-用改写的OncoBinder（没有提供脚本）找interaction并画图。中央是PD-L1，周围是跟它有相互作用关系的蛋白质。
-Use the rewritten OncoBinder (no script provided) to find the interaction and draw the graph. PD-L1 is in the center, and the proteins that interact with it are around it.
-
-Figure legend和正文都没有描述线的长短和数量与哪个特征相对应。
-Neither the figure legend nor the text describes which feature the length and number of lines correspond to.
-
-我们结合这两幅图设计了下面的图，设计思路看这篇：<https://mp.weixin.qq.com/s/cQzsw1DKTUqooBmE078k2A>
-We combined these two graphs to design the following graph. For the design ideas, see this article: <https://mp.weixin.qq.com/s/cQzsw1DKTUqooBmE078k2A>
+用STRING数据库的查询结果作为输入，画出FigureYa147interaction那样的图。
 
 ## 应用场景
 ## Application scenarios
@@ -73,9 +44,8 @@ The relationship between transcription factor-target gene can be designed as fol
 
 ```{r}
 source("install_dependencies.R")
-
-library(org.Hs.eg.db)         # 加载人类基因注释数据库｜Load human gene annotation database
-library(clusterProfiler)      # 加载富集分析工具包｜Load enrichment analysis toolkit
+library(tidyr)                # 加载tidyr包｜Load tidyr package
+library(scales)               # 加载scales包｜Load scales package
 library(ggplot2)              # 加载绘图包｜Load plotting package
 library(reshape2)             # 加载数据重塑包｜Load data reshaping package
 library(igraph)               # 加载网络分析包｜Load network analysis package
@@ -87,8 +57,6 @@ options(stringsAsFactors = FALSE) #禁止chr转成factor #Disable chr conversion
 
 自定义画图函数
 Custom drawing function
-
-`fcircle` is built for the white background of PD-L1 
 
 ```{r}
 mycircle <- function(coords, v=NULL, params) {
@@ -117,9 +85,10 @@ mycircle <- function(coords, v=NULL, params) {
          })
 }
 
+# Define new vertex shape "fcircle" (filled circle with border)
 add.vertex.shape("fcircle", clip=igraph.shape.noclip,
-		 plot=mycircle, parameters=list(vertex.frame.color=1,
-                                  vertex.frame.width=1))
+		 plot=mycircle, parameters=list(vertex.frame.color="white", # 或 "black"｜Or "black"
+                                  vertex.frame.width=2)) # 边框宽度为2｜Border width = 2
 ```
 
 ## 参数设置
@@ -127,103 +96,20 @@ add.vertex.shape("fcircle", clip=igraph.shape.noclip,
 
 ```{r}
 # Give your focus official gene_symbol
-sourceGene <- "CD274"
+sourceGene <- "FOXP3"
 
 # Given name will be shown on the plot instead.
-sourceName <- "PD-L1" 
+sourceName <- "FOXP3" 
 ```
 
 ## 输入文件
 ## Input file
 
-如果你已经获得interaction关系，就把自己的数据整理成easy_input.csv文件的格式，跳过这步，直接进入“开始画图”。
-If you have already obtained the interaction relationship, organize your data into the format of easy_input.csv file, skip this step and go directly to "Start drawing".
+STRING数据库<https://string-db.org>，点击STRING chat。
 
-### 相互作用文件的下载
-### Download interaction file
+输入：“show me a table of proteins interact with FoxP3 in human, with score > 0.8, including four columns: FoxP3, the other protein, location, score”
 
-- 数据库。这里用ComPPI数据库检索interaction：Compartmentalized Protein-Protein Interaction Database | v2.1.1, <http://comppi.linkgroup.hu/protein_search>，适用于人、果蝇、线虫和酵母。
-- Database. Here, we use the ComPPI database to search for interactions: Compartmentalized Protein-Protein Interaction Database | v2.1.1, <http://comppi.linkgroup.hu/protein_search>, which is suitable for humans, fruit flies, nematodes and yeast.
-
-![](step1.png)
-
-其他物种可以用STRING检索，也有score。找更复杂的相互作用关系可参考FigureYa53PPI，用cytoscape画图可参考FigureYa54cytoscape。
-Other species can be searched with STRING, and there is also score. For more complex interaction relationships, please refer to FigureYa53PPI, and for drawing with cytoscape, please refer to FigureYa54cytoscape.
-
-- 检索蛋白质"CD274"
-- Search for protein "CD274"
-
-![](step2.png)
-
-- 下载interaction文件。As the result of your search query, the following two proteins were found.    
-- Download interaction file. As the result of your search query, the following two proteins were found.
-
-Q9NZQ7 (UniProtKB-AC)	Programmed cell death 1 ligand 1	   
-Q0GN75 (UniProtKB-AC)	CD274   
-
-I chose Q0GN75 for use. 
-
-Download file "comppi--interactors_of_Q9NZQ7.txt".
-<http://comppi.linkgroup.hu/protein_search/interactors/Q0GN75/download>
-
-![](step3.png)
-
-### 输入数据的整理
-### Input data sorting
-
-comppi--interactors_of_Q0GN75.txt，上一步获得的interaction信息。每行一个蛋白质，所有证据和分数都在Major.Loc.With.Loc.Score里面，用｜分隔，需要拆开成每条证据单独一行。
-
-comppi--interactors_of_Q0GN75.txt, interaction information obtained in the previous step. One protein per line, all evidence and scores are in Major.Loc.With.Loc.Score, separated by |, need to be split into a separate line for each piece of evidence.
-
-```{r}
-idata <- read.table(file = "comppi--interactors_of_Q0GN75.txt", sep = "\t", header = T, quote = "")
-idata[1:4,]
-
-# 提取各种证据及其对应的score，每个证据单独一行
-# Extract various evidences and their corresponding scores, each evidence in a separate line
-ilinks <- NULL
-for(i in 1:nrow(idata)){
-  for(j in strsplit(idata$Major.Loc.With.Loc.Score[i], split = "\\|")[[1]]){
-    tmp <- strsplit(j, split = "\\(")[[1]]
-    ilinks <- rbind(ilinks, c(idata$Interactor[i], 
-                              tmp[1],
-                              gsub(pattern = "\\)", "", tmp[2])))
-  }
-}
-colnames(ilinks) <- c("Interactor", "Loc","LocScore")
-ilinks <- as.data.frame(ilinks)
-head(ilinks)
-
-# filter out outlier link
-# 这里提取以下6种，实际应用时根据你自己的数据修改
-# Extract the following 6 types here, modify according to your own data in actual application
-ilinks <- ilinks[ilinks$Loc %in% c("Cytosol", "Secretory-pathway", "Extracellular", "Membrane","Mitochondrion", "Nucleus"),]
-
-# convert uniprot id to gene symbol
-idMap <- bitr(idata$Interactor, "UNIPROT", toType = "SYMBOL", OrgDb = org.Hs.eg.db)
-ilinks$gene <- idMap$SYMBOL[match(ilinks$Interactor, idMap$UNIPROT)]
-
-# 根据网页提供的公式计算相互作用打分：
-# Calculate the interaction score according to the formula provided on the web page:
-# http://comppi.linkgroup.hu/help/scores
-ilinks$LocScore <- as.numeric(ilinks$LocScore)
-locScoreMat <- dcast(ilinks, formula = gene ~Loc, value.var = "LocScore", fun.aggregate = mean)
-locScoreMat[is.na(locScoreMat)] <- 0
-rownames(locScoreMat) <- locScoreMat$gene
-locScoreMat <- locScoreMat[,-1]
-locScoreMat$InteractionScore <- 1- apply(locScoreMat[,1:6], 1, function(x) prod(1-x*locScoreMat[sourceGene,]))
-
-# prepare network elements
-ilinks$source <- sourceGene
-ilinks$target <- ilinks$gene
-links <- unique(ilinks[,c("source", "target", "Loc")]) # remove duplicated genes
-links <- links[links$target  != sourceGene,] # remove sourceGene 
-links$score <- locScoreMat[links$target, "InteractionScore"]
-
-# 保存到文件
-# Save to file
-write.csv(links, "easy_input.csv", quote = F, row.names = F)
-```
+把表格复制到txt文件，命名为easy_input.txt。
 
 ## 开始画图
 ## Start drawing
@@ -234,13 +120,19 @@ Drawing with igraph
 ```{r net}
 # 读取相互作用关系和score
 # Read the interaction relationship and score
-links <- read.csv("easy_input.csv", header = T)
-head(links)
 
+links <- read.table("easy_input.txt", header = TRUE, sep = "\t")
+colnames(links) <- c("source", "target", "Loc", "score")
+# 把score归一化｜Rescale score
+#links$score <- rescale(links$score, to = c(1, 10))
+
+# 拆分Loc列｜Split Loc column
+links <- separate_rows(links, Loc, sep = ", ")
+head(links)
 net <- graph_from_data_frame(links, directed = F)
 
-pal_loc <- setNames(RColorBrewer::brewer.pal(7, name = "Set3")[-2], 
-                      sort(unique(links$Loc)))
+n_loc <- length(unique(links$Loc))
+pal_loc <- setNames(RColorBrewer::brewer.pal(n_loc, name = "Set1"), sort(unique(links$Loc)))
 
 # see plot.igraph for more settings 
 vertexes <- get.vertex.attribute(net, "name")
@@ -270,12 +162,12 @@ plot(net, layout = lay,
      vertex.label.color = ifelse(vertexes == sourceGene, "black", "grey30"),
      vertex.label.family = "sans",
      vertex.label.cex = ifelse(vertexes == sourceGene, 0.9, 0.6),
-     edge.curved = curve_multiple(net, start = 0.06)) 
+     edge.curved = curve_multiple(net, start = 0.06))
      # fine tune "start" to get better visual effect. To shrink multiple edges using smaller value.
 legend(-1, -1, legend= names(pal_loc),
        col= pal_loc, lty=1, cex=0.6,
        box.lty=1, box.lwd=1, box.col="black")
-dev.off()
+dev.off() 
 ```
 
 ![](interaction.pdf)
